tests/snapshots/sfc/ts/script_setup__definemodel_with_options.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { useModel as _useModel, defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, withDirectives as _withDirectives, vModelText as _vModelText } from "vue"


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: {
    "modelValue": { type: Number, default: 0 },
    "modelModifiers": {},
  },
  emits: ["update:modelValue"],
  setup(__props) {

const count = _useModel(__props, "modelValue")

return (_ctx: any,_cache: any) => {
  return _withDirectives((_openBlock(), _createElementBlock("input", {
      "onUpdate:modelValue": _cache[0] || (_cache[0] = ($event: any) => ((count).value = $event)),
      type: "number"
    }, null, 512 /* NEED_PATCH */)), [ [_vModelText, count.value] ])
}
}

})
