tests/snapshots/sfc/ts/script_setup__function_declarations.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

function increment() {
  count++
}
const handler = () => {}

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("button", { onClick: increment }, "Click"))
}
}

})
